Add birthday website with memories gallery and images

--- a/index.html
+++ b/index.html
@@ -115,89 +115,7 @@
             <!-- Phần Gallery Kỷ Niệm -->
             <div class="memories-section">
                 <h2>📸 Kỷ Niệm Đẹp Của Chúng Mình</h2>
-                <div id="memories-albums" class="memories-albums"></div>
-                <div class="memories-gallery">
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #667eea 0%,
-                                #764ba2 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2023-01</div>
-                        <div class="memory-text">Lần đầu gặp nhau</div>
-                    </div>
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #f093fb 0%,
-                                #f5576c 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2023-06</div>
-                        <div class="memory-text">Chuyến đi du lịch</div>
-                    </div>
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #4ecdc4 0%,
-                                #44b3aa 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2023-12</div>
-                        <div class="memory-text">Giáng sinh đầu tiên</div>
-                    </div>
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #ffd700 0%,
-                                #ffed4e 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2024-05</div>
-                        <div class="memory-text">Kỷ niệm 1 năm yêu</div>
-                    </div>
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #a8e6cf 0%,
-                                #56ab91 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2024-10</div>
-                        <div class="memory-text">
-                            Những khoảnh khắc lãng mạn
-                        </div>
-                    </div>
-                    <div
-                        class="memory-item"
-                        style="
-                            background: linear-gradient(
-                                135deg,
-                                #ff6b6b 0%,
-                                #ff8787 100%
-                            );
-                        "
-                    >
-                        <div class="memory-date">2025-02</div>
-                        <div class="memory-text">Những ngày tuyệt vời</div>
-                    </div>
-                </div>
+                <div id="memories-album" class="memories-album"></div>
             </div>
 
             <!-- Phần số đếm ngược -->
