--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             content="black-translucent"
         />
         <meta name="apple-mobile-web-app-title" content="Happy Birthday" />
-        <title>🎂 Chúc Mừng Sinh Nhật Em Yêu</title>
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%25' y='50%25' dominant-baseline='central' text-anchor='middle' font-size='80'>🎂</text></svg>" />
+        <title>Chúc Mừng Sinh Nhật Em Yêu</title>
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
