--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         />
         <meta name="apple-mobile-web-app-title" content="Happy Birthday" />
         <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50%25' y='50%25' dominant-baseline='central' text-anchor='middle' font-size='80'>🎂</text></svg>" />
+        <!-- Preload ảnh đầu tiên để load nhanh hơn -->
+        <link rel="preload" href="memories/01.jpg" as="image" />
+        <link rel="preload" href="memories/02.jpg" as="image" />
+        <link rel="preload" href="memories/03.jpg" as="image" />
         <title>Chúc Mừng Sinh Nhật Em Yêu</title>
         <link rel="stylesheet" href="style.css" />
     </head>
